--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -18,6 +18,7 @@
   height: auto;
   border-radius: 50%;
   display: block;
+  border: 2x solid #ffdd1a;
   margin-right: auto;
   margin-left: auto;
 }
