--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,7 +29,7 @@
   --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 18px;
   --body-line-height: 1.5;
-  --body-color: var(--gray-700);
+  --body-color: #f5e6bd;
   --body-bg: #fff;
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
