--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@
   --body-font-size: 18px;
   --body-line-height: 1.5;
   --body-color: #f5e6bd;
-  --body-bg: #fff;
+  --body-bg: var(--gray-700);
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
