--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,8 +29,8 @@
   --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 18px;
   --body-line-height: 1.5;
-  --body-color: var(--gray-700);
-  --body-bg: #fff;
+  --body-color: #f2dca6;
+  --body-bg: var(--gray-700);
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
