--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@
   --body-font-size: 18px;
   --body-line-height: 1.5;
   --body-color: var(--gray-800);
-  --body-bg: #f2dca6;
+  --body-bg: #f6e5bc;
 
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
