--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,7 @@ layout: default
 
 {% include home-header.html %}
 
-<h1 class="page-title"> Welcome!
-  <p class="lead"> I am an M.Phil. student in Risk Management Science in the Department of Statistics at the Chinese University of Hong Kong. 
-    I am doing research under the supervision of Prof. Kin Wai CHAN. My research interests include long-run variance estimation of time series.
+<zero-md src="README.md"></zero-md>
     
 <div class="posts">
   {% for post in paginator.posts %}
