--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,8 +15,9 @@
 .content {
   padding-top: var(--spacer-2);
   padding-left: var(--spacer-2);
+  padding-right: var(--spacer-2);
   margin-left:  auto;
-  margin-right: auto;
+  margin-right: 10%;
   min-height: 100vh;
 }
 
