--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,9 @@
       <div class="content pure-u-1 pure-u-md-1-2">
         {%- include content.html -%}
       </div>
+      <div class="sidebar-right pure-u-1 pure-u-md-1-4">
+        {%- include sidebar-right.html -%}
+      </div>
     </div>
 
     <script async src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
