--- a/_includes/content.html
+++ b/_includes/content.html
@@ -11,7 +11,8 @@
     {%- assign year_string = year_from | append: '&nbsp;' | append: '-' | append: '&nbsp;' | append: year_to -%}
   {%- endif -%}
   <small>
-    &copy; {{ year_string }} {% if site.author %}<a href="{{ site.author.url }}">{{ site.author.name }}</a>{% endif %}. All rights reserved.
+    &copy; {{ year_string }} {% if site.author %}<a href="{{ site.author.url }}">{{ site.author.name }}</a>{% endif %}. 
+    All rights reserved.
     Powered by Github.
   </small>
 </footer>
