--- a/_includes/content.html
+++ b/_includes/content.html
@@ -12,7 +12,7 @@
   {%- endif -%}
   <small>
     &copy; {{ year_string }} {% if site.author %}<a href="{{ site.author.url }}">{{ site.author.name }}</a>{% endif %}. 
-    All rights reserved.
+    Template by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://github.com/vszhub/not-pure-poole">Not Pure Poole</a>.
     Powered by Github.
   </small>
 </footer>
