--- a/_includes/content.html
+++ b/_includes/content.html
@@ -5,13 +5,14 @@
 <footer class="footer">
   {%- assign year_from = site.posts[-1].date | date: '%Y' -%}
   {%- assign year_to   = site.time | date: '%Y' -%}
+   {%- assign mon_to   = site.time | date: '%M' -%}
   {%- if year_from == nil or year_from == year_to -%}
     {%- assign year_string = year_from -%}
   {%- else -%}
-    {%- assign year_string = year_from | append: '&nbsp;' | append: '-' | append: '&nbsp;' | append: year_to -%}
+    {%- assign year_string =  mon_to | append year_to -%}
   {%- endif -%}
   <small>
-    &copy; {{ year_string }} {% if site.author %}<a href="{{ site.author.url }}">{{ site.author.name }}</a>{% endif %}. 
+    &copy; Updated {{ year_string }} by {% if site.author %}<a href="{{ site.author.url }}">{{ site.author.name }}</a>{% endif %}. 
     Template by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://github.com/vszhub/not-pure-poole">Not Pure Poole</a>.
     Powered by Github.
   </small>
