--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,3 +3,27 @@ layout: default
 ---
 
 {% include home-header.html %}
+
+<h1 id="welcome-">Welcome!</h1>
+<p>I am an M.Phil. student in Risk Management Science in the <a href="https://www.sta.cuhk.edu.hk">Department of Statistics</a> at the <a href="https://www.cuhk.edu.hk/english/index.html">Chinese University of Hong Kong</a>. I am doing research under the supervision of <a href="https://sites.google.com/site/kwchankeith/home?authuser=0">Prof. Kin Wai CHAN</a>. My research interests include long-run variance estimation of time series.</p>
+<h2 id="education-background">Education Background</h2>
+<ul>
+<li>M.Phil. in Risk Management Science (Expected 2023)</li>
+<li>B.Sc. in Quantitative Finance and Risk Management Science, First Class Honors; Minor in Statistics<ul>
+<li>Term-Long Exchange Program with <a href="https://www.wharton.upenn.edu">Wharton School, University of Pennsylvania</a> (18/19)</li>
+</ul>
+</li>
+</ul>
+<h2 id="awards">Awards</h2>
+<ul>
+<li>Best Teaching Assistant Award (2021-22 Term 1)</li>
+<li>Dean&#39;s List (16/17, 17/18, 19/20)</li>
+<li>Master&#39;s List, Wu Yee Sun College (16/17, 17/18, 19/20)</li>
+<li>Academic Excellence Scholarship, Wu Yee Sun College (16/17, 17/18, 19/20)</li>
+<li>Best Final Project Award,  Wu Yee Sun College (/21)</li>
+<li>Academic Excellence Scholarship, Faculty of Science (02/21)</li>
+<li>CMA and Donors Scholarships (01/19)</li>
+<li>Semester Exchange Program Scholarship (01/19)</li>
+<li>Yasumoto International Exchange Scholarship (11/18)</li>
+<li>The Sunny Award, Wu Yee Sun College (11/16)</li>
+</ul>
