--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,7 +24,7 @@
 
   --blue-300: #74c0fc;
   --blue-400: #4dabf7;
-  --yellow-100: #fff3bf;
+  --yellow-100: #fff8dc;
 
   --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 18px;
