--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,6 +16,7 @@
   padding-top: var(--spacer-2);
   padding-left: var(--spacer-2);
   margin-left:  auto;
+  width: 100%;
   min-height: 100vh;
 }
 
