--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -36,6 +36,7 @@ footer {
   .content {
     padding-top: var(--spacer-3);
     padding-left: var(--spacer-3);
+    padding-right: var(--spacer-3);
     margin-left: 25%;
   }
 
