--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,6 +15,7 @@
 .content {
   padding-top: var(--spacer-2);
   padding-left: var(--spacer-2);
+  padding-right: var(--spacer-2);
   margin-left:  auto;
   width: 100%;
   min-height: 100vh;
