--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,6 +17,7 @@
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
   margin-left:  auto;
+  margin-right: auto;
   width: 100%;
   min-height: 100vh;
 }
